webadmin, userportal: fixed spacing for grids
CSS for first columns in all grids was broken such that left
padding wasn't applied. Fixed.

Also added a bit more padding between cells to prevent text
in adjacent cells from being 0 pixels apart.

Also noticed that icons in grids (comment icon, VM circle icon,
etc.) were not centered. Fixed.

Bug-Url: https://bugzilla.redhat.com/1131975
Bug-Url: https://bugzilla.redhat.com/1127674

--- a/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabCellTable.css
+++ b/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/TabCellTable.css
@@ -1,13 +1,6 @@
 .cellTableWidget {
 }
 
-.cellTableFirstColumn {
-    padding: 2px 15px;
-}
-
-.cellTableLastColumn {
-}
-
 .cellTableFooter {
 }
 
@@ -26,7 +19,7 @@
 }
 
 .cellTableCell {
-    padding: 0px 3px 0px 0px;
+    padding: 0px 8px 0px 2px;
     height: 26px !important;
     border-top: 0px;
     border-bottom: 1px solid #EDEEF0;
@@ -57,4 +50,15 @@
 @sprite .cellTableLoading {
     gwt-image: 'cellTableLoading';
     margin: 3px;
+}
+
+.cellTableFirstColumn {
+    padding-left: 3px;
+}
+
+.cellTableLastColumn {
+}
+
+.cellTableFirstColumnHeader {
+    padding-left: 4px;
 }
